--- a/autores.html
+++ b/autores.html
@@ -14,20 +14,16 @@
     <div class="container">
 
                 <main class="main-content">
-            <section class="section contact-hero">
-                <div class="contact-hero-content">
-                    <i class="fas fa-paper-plane contact-icon"></i>
-                    <h2>¡Post para nuestra revista!</h2>
-                    <p class="subtitle">¿Tienes un artículo para Cienciométrik? <br> ¡Escribenos!</p>
-                </div>
-            </section>
+
 
             <section id="autores" class="section">
-                <h2>¡Autores, escritories, literarios, todos!</h2>
+                <h2>Requisitos de publicación para autores</h2>
 
                 <div class="content-with-image">
                     <div class="text-content">
                         <p>Invitamos a aprendices, instructores e investigadores a contribuir con sus trabajos a la Revista Cienciometrik.</p>
+                        <H3>Código ético y de antiplagio</H3>
+                        <p>Recuerda que artículo debe ser original, inédito y basado en información veraz, citando siempre todas las fuentes y autores adecuadamente para evitar el plagio. La contribución de cada autor debe ser significativa y transparente, garantizando así la integridad y calidad académica que nuestra revista promueve.</p>
                         <h3>Documentación:</h3>
                         <ul>
                     <a href="https://drive.google.com/drive/u/3/folders/1GFmLC1g07gxpe4XkZzHOjzpta4wyPdgr" target="_blank" class="submit-button">
@@ -46,20 +42,16 @@
                         <br><br>
                         
                         <p>Si no cuentas aún con usuario y contarseña, solicitalo aquí.</p>
-                        <a href="login/login.html" class="button calm-button">
-                            Solicitar Usuario y Contraseña
-                        </a>
+                        <p class="button calm-button"><a href="mailto:cienciometrik@gmail.com">cienciometrik@gmail.com</a></p>
+
 
                         <div id="mensaje" class="mensaje"></div>
                     </div> 
-                    <div class="image-container-volumenes">
-                        <img src="images/edicion_autores.png" alt="Imagen de edición para autores" class="image-authors">
-                    </div>
-                </div> 
 
-                <div class="image-prefooter-container">
-                    <img src="images/Studthink.png" alt="Imagen de Studthink" class="image-prefooter-centered">
-                </div>
+                </div> 
+<div class="image-container-volumenes">
+        <img src="images/edicion_autores.png" alt="Imagen de edición para autores" class="image-authors">
+    </div>
 
             </section>
         </main>
