--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -3,7 +3,7 @@
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Quiénes Somos</title>
+     <title>¿Quiénes Somos?</title>
      <link rel="stylesheet" href="CSS/styles.css">
      <link rel="stylesheet" href="CSS/metricas.css"> 
  </head>
@@ -15,12 +15,6 @@
 
          <main class="main-content">
 
-            <section class="section contact-hero">
-                <div class="contact-hero-content">
-                    <i class= "fas fa fa-lightbulb contact-icon"></i>
-                    <h2>¿Quiénes somos?</h2>
-                </div>
-            </section>
 
              <section id="quienes-somos" class="section">
                  <h2>¿Quiénes somos?</h2>
