Retoques para entrega
Retoques para entrega

--- a/contactanos.html
+++ b/contactanos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos - Revista Cienciometrik</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/metricas.css">
+    <!-- <link rel="stylesheet" href="CSS/metricas.css"> -->
 </head>
 <body>
     <mi-header id="top"></mi-header>
