--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="inicio" class="section">
                 <div class="main-content-banner">
                     <div class="image-wrapper right-image">
-                        <img src="images/IMG-MOV-INDX.png" id="img_moving" class="animated-image-banner">
+                        <img src="images/piensa publica impacta.png" id="img_moving" class="animated-image-banner">
                     </div>
                     <div class="image-wrapper left-image">
                         <img src="Docs/UltimoVolumen/Revista Cienciometrik Vol. 3 N° 4, Enero - Julio.png" id="portada_imagen" alt="Imagen de portada de la revista" class="main-image-banner">
