--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -70,7 +70,9 @@
                                 </li>
                                 <li><strong>Comité científico y editorial:</strong>
                                     <ul class="quienes-somos-sublist">
-                                        <li>En proceso de conformación</li>
+                                        <li>Ana Cecilia Hernández (Asesor/Evaluador)</li>
+                                        <li>Hugo Alexánder Semanate Quihónez (Editor de la revista)</li>
+                                        <!-- Aquí se agregarían los demás miembros de la tabla -->
                                     </ul>
                                 </li>
                             </ul>
