--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@
                     <li id="l1"><strong>Julio - Diciembre 2023:</strong> Publicación del Vol. 1 N°. 1.</li>
                     <li id="l2"><strong>Enero - Junio 2024:</strong> Publicación del Vol. 2 N°. 2.</li>
                     <li id="l3"><strong>Julio - Diciembre 2024:</strong> Publicación del Vol. 2 N°. 3 y realización del 1er Simposio Nacional de Cienciometría.</li>
+                    <li id="l3"><strong>Enero - Julio 2025:</strong> Publicación del Vol. 3 N° 4</li>
+
                 </ul>
             </section>
             <section id="enfoque" class="section">
