actualziaciones quienes somos
ok

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -70,8 +70,16 @@
                                 </li>
                                 <li><strong>Comité científico y editorial:</strong>
                                     <ul class="quienes-somos-sublist">
-                                        <li>Ana Cecilia Hernández (Asesor/Evaluador)</li>
-                                        <li>Hugo Alexánder Semanate Quihónez (Editor de la revista)</li>
+                                        <li>Sebastián Robledo Giraldo (PhD. Universidad Nacional de Colombia, Sede De La Paz)</li>
+                                        <li>Wilson Ramon Hernández (PhD. Servicio Nacional de Aprendizaje Sena, Antioquia)</li>
+                                        <li>Rosa Quintero Amaya (M.Sc. Universidad Nacional de Colombia, Bogotá)</li>
+                                        <li>Laura Marcela Gaviria Yepes (M.Sc. Servicio Nacional de Aprendizaje Sena, Antioquia)</li>
+                                        <li>Nelson David Bolívar Ardila (M. Sc. Servicio Nacional de Aprendizaje Sena, Antioquia)</li>
+                                        <li>Luz Carime Chía Cepeda (PHD. Servicio Nacional de Aprendizaje Sena, Cauca)</li>
+                                        <li>Yaneth Fabiola Yolima Aglaya Daza Paredes (M.Sc. Servicio Nacional de Aprendizaje Sena, Distrito Capital)</li>
+                                        <li>Carlos David Martínez Ramírez (M.Sc. Servicio Nacional de Aprendizaje Sena, Distrito Capital)</li>
+                                        <li>Marcelo Vargas Asenjo (M.Sc. Servicio Nacional de Aprendizaje Sena, Regional Huila)</li>
+                                        <li>Johan Sánchez Murillas (M.Sc. Instituto Departamental de Bellas Artes, Valle del Cauca)</li>
                                         <!-- Aquí se agregarían los demás miembros de la tabla -->
                                     </ul>
                                 </li>
@@ -85,19 +93,24 @@
                                 Información de la Revista
                             </h3>
                             <p>
-                                <strong>Nombre:</strong> Cienciometrik<br>
-                                <strong>Tipo de Publicación:</strong> Semestral<br>
-                                <strong>Entidad Editora:</strong> Servicio Nacional de Aprendizaje SENA. Centro de Comercio.<br>
-                                <strong>Dirección:</strong> Calle 51 No. 57-70. Torre Sur. Piso 4. Medellín, Antioquia, Colombia.<br>
-                                <strong>ISSN:</strong> 2981-5533
-                            </p>
+                        <strong>Nombre:</strong> Cienciometrik<br>
+                        <strong>Tipo de Publicación:</strong> Semestral<br>
+                        <strong>Entidad Editora:</strong> Servicio Nacional de Aprendizaje SENA. Centro de Comercio.<br>
+                        <strong>Dirección:</strong> Calle 51 No. 57-70. Torre Sur. Piso 4. Medellín, Antioquia, Colombia.<br>
+                        <strong>ISSN:</strong> 2981-5533 <br>
+                        <strong>Sitio web Cienciométrik:</strong> 
+                        <a href="https://revistacienciometrik.github.io/inicio/" 
+                        target="_blank" 
+                        class="enlace-elegante">https://revistacienciometrik.github.io/inicio/</a>
+                             </p>
+
                         </div>
                         
                         <!-- TARJETA 4: INVITACIÓN -->
                         <div class="quienes-somos-card">
                             <h3>
                                 <i class="fas fa-handshake"></i>
-                                Invitación a la Comunidad SENNOVA
+                                Invitación a la comunidad científica
                             </h3>
                             <p>
                                 Invitamos a aprendices, instructores e investigadores del Sistema SENNOVA a ser parte de Cienciometrik,
