Autor rechazo comment
edit ok
Y eliminación del perfil del editor de la página

--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -245,10 +245,10 @@
                     let estadoTexto;
                     if (data.aprobadoRevisor === true) {
                         estadoClase = 'status-aprobado';
-                        estadoTexto = 'Aprobado por Revisor';
+                        estadoTexto = 'Aprobado por el Admin/Revisor';
                     } else if (data.aprobadoRevisor === false) {
                         estadoClase = 'status-rechazado';
-                        estadoTexto = 'Rechazado por Revisor';
+                        estadoTexto = 'Rechazado por el Admin y/o el Revisor: Revisar comentarios y editar articulo';
                     } else {
                         estadoClase = 'status-pendiente-de-revision';
                         estadoTexto = 'Pendiente de Revisión';
