ok publicacinoes y métricas
ok publicacinoes y métricas

--- a/admin_cemter/autor_panel.html
+++ b/admin_cemter/autor_panel.html
@@ -57,7 +57,7 @@
                     </div>
                     <br>
                     <a href="https://drive.google.com/drive/folders/1CWcmaeNfji335XACO76MLwtonVAImtfZ?usp=drive_link" target="_blank" class="submit-button">
-                    <i class="fas fa-upload"></i> PDF Upload
+                    <i class="fas fa-upload"></i> Doc Upload
                     </a>
                     <p>Sube tu PDF aquí.</p>
                     <br>
