--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- ------------------------------------------------------------------------------------------------------     -->
 <style>
-        /* --- ESTILOS MEJORADOS --- */
+        /* --- ESTILOS MEJORADOS OARA EL INDEX--- */
         :root {
             --primary-color: #003057;
             --secondary-color: #008394;
@@ -402,7 +402,7 @@
     </div>
     <mi-footer id="bottom"></mi-footer>
 
-<!-- SCRIPT PARA LA UNIÓN AL PANELMETRICAS.JS PARA EL CONTADOR DE VISITAS -->
+<!-- SCRIPT PARA LA UNIÓN AL PANELMETRICAS.JS PARA EL CONTADOR DE VISITAS EN EL PANEL DEMÉTRICAS -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             let visits = parseInt(localStorage.getItem('web_visits') || '0');
