--- a/admin_cemter/revisor.html
+++ b/admin_cemter/revisor.html
@@ -117,7 +117,7 @@
         // Importa las funciones específicas para Firestore.
         import { getFirestore, collection, updateDoc, doc, query, where, getDocs, serverTimestamp, orderBy, Timestamp, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
         
-        // Aquí está la configuración de tu proyecto de Firebase.
+        // Aquí está la configuración de el proyecto de Firebase.
         const firebaseConfig = {
             apiKey: "AIzaSyAuRQC65O5zlkNbcnp1srZkQpjmD82TVco",
             authDomain: "cienciometrik-3c8e7.firebaseapp.com",
@@ -128,7 +128,7 @@
         };
         // Inicializa Firebase.
         const app = initializeApp(firebaseConfig);
-        // Obtén una referencia a la base de datos de Firestore.
+        // se obtiene una referencia a la base de datos de Firestore.
         const db = getFirestore(app);
         
         // --- REFERENCIAS A ELEMENTOS DEL DOM ---
