--- a/login/pass_rec.html
+++ b/login/pass_rec.html
@@ -9,7 +9,7 @@
         /* Ajustes para el ancho del formulario de solicitud de recuperación */
         .login-box {
             max-width: 450px; /* Un poco más de espacio para los campos */
-            padding: 30px; /* Puedes ajustar el padding si lo deseas */
+            padding: 30px; /* se puede ajustar el padding si lo deseas */
         }
     </style>
 </head>
