Métricas FIREBASE - OK !!
Métricas FIREBASE - OK !!

--- a/contactanos.html
+++ b/contactanos.html
@@ -89,6 +89,10 @@
     </div>
     
     <mi-footer id="bottom"></mi-footer>
+
+    <!-- PARA CONECTAR CON LA BASE DE DATOS DEL PANEL EN FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     
     <!-- Scripts -->
     <script src="Objects/header.js"></script>
@@ -178,5 +182,7 @@
             });
         });
     </script>
+
+
 </body>
 </html>
