--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -142,6 +142,10 @@
         <metricas-panel></metricas-panel> 
     </div>
     <mi-footer id="bottom"></mi-footer>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     
     <script src="Objects/header.js"></script>
     <script src="Objects/container.js"></script>
