--- a/autores.html
+++ b/autores.html
@@ -90,6 +90,10 @@
     </div>
     <mi-footer id="bottom"></mi-footer>
     
+    <!-- PARA CONECTAR CON LA BASE DE DATOS DEL PANEL EN FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+
     <script src="Objects/header.js"></script>
     <script src="Objects/container.js"></script>
     <script src="Objects/footer.js"></script>
