--- a/autores.html
+++ b/autores.html
@@ -99,6 +99,6 @@
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
     <script src="js/panelmetricas.js"></script>
-    <script src="js/download_tracker.js"></script>
+    <!-- <script src="js/download_tracker.js"></script> SE COMENTA PARA DETENER EL CONTEO DE DESCARGAS COMO LOCALHOST-->
 </body>
 </html>
