--- a/publicaciones.html
+++ b/publicaciones.html
@@ -409,7 +409,7 @@
     <script src="Objects/container.js"></script>
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
-    
+        <!-- <script src="js/download_tracker.js"></script> SE COMENTA PARA DETENER EL CONTEO DE DESCARGAS COMO LOCALHOST-->
     
     <!-- Script para inicializar y manejar contadores individuales -->
     <script>
