--- a/contactanos.html
+++ b/contactanos.html
@@ -100,7 +100,7 @@
     <script src="Objects/footer.js"></script>
     <script src="Objects/script.js"></script>
     <script src="js/panelmetricas.js"></script>
-    <script src="js/download_tracker.js"></script>
+    <!-- <script src="js/download_tracker.js"></script> SE COMENTA PARA DETENER EL CONTEO DE DESCARGAS COMO LOCALHOST-->
     
     <script type="module">
         // Importa las funciones que necesitas del SDK de Firebase.
