--- a/login/login.html
+++ b/login/login.html
@@ -25,9 +25,9 @@
                 </div>
                 <button type="submit" class="login-button">Iniciar sesión</button>
             </form>
-            <p class="create-account">
+            <!-- <p class="create-account">
                 <a href="crear_cuenta.html"><br>Crear una cuenta</a>
-            </p>
+            </p> -->
             <p class="create-account">
                 <a href="../index.html"><br>Volver al inicio</a>
             </p>
